# omnicross

./: .gitignore  LICENSE  README.md  test-k8s.py  test.py  test.py.deprecated  werf.yaml
.devcontainer/: devcontainer.json
.helm/: values.yaml
.helm/templates/: external-service.yaml  headless-service.yaml  loadbalancer.yaml  statefulset.yaml
Screenshot + Video for Simulation/: Vehicle Simulation Video.webm
app/: Dockerfile
app/src/: config.py  main.py  wait_for_finder.py
rsm/: Cargo.toml  Dockerfile  README.md  docker-compose.test.yml  test.py
rsm/src/: api.rs  consensus.rs  main.rs  topology.rs  topologyk8s.rs  util.rs
simulation/: junction_traffic_manager.py  network.edg.xml  network.nod.xml  routes.rou.xml  run_sumo_simulation.sh  sumo.cfg.xml
simulation/simulation_all_diagonal/: dependencies_sim_diagonal.json  junction_traffic_manager.py  network.edg.xml  network.net.xml  routes.rou.xml  run_sumo_simulation.sh
simulation/simulation_all_left/: dependencies_sim_left.json  junction_traffic_manager.py  routes.rou.xml  run_sumo_simulation.sh
simulation/simulation_all_random/: dependencies_sim_random.json  junction_traffic_manager.py  routes.rou.xml  run_sumo_simulation.sh
simulation/simulation_all_right/: dependencies_sim_right.json  junction_traffic_manager.py  network.nod.xml  routes.rou.xml  run_sumo_simulation.sh
simulation/simulation_all_straight/: dependencies_sim_straight.json  junction_traffic_manager.py  routes.rou.xml  run_sumo_simulation.sh  sumo.cfg.xml
