[package]
name = "omnicrossrsm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# consensus algorithm
omnipaxos_core = { git = "https://github.com/haraldng/omnipaxos", version = "0.1.0", features = ["serde"] }
omnipaxos_storage = { git = "https://github.com/haraldng/omnipaxos", version = "0.1.0", features = ["sled"]}

axum = "0.6.18" # web framwork
tokio = { version = "1.28.0", features = ["full"] } # async runtime needed for axum

serde = { version = "1.0.160", features = ["derive"] } # serialization...
serde_json = "1.0.96" # ...to json

reqwest = { version = "0.11.17", features = ["json"] } # high level http client for sending requests
